# voice_puppet

./: .gitignore  README.md  pyproject.toml
src/voice_puppet/: __init__.py
tests/: test_voice_puppet.py  testscript.txt
