[project]
name = "voice-puppet"
version = "0.1.0"
description = "Experimentation with voice cloning for performance."
authors = [
    { name = "Sam Lavigne", email = "splavigne@gmail.com" }
]
dependencies = [
    "torch>=2.2.1",
    "tts>=0.22.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "gradio>=4.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/voice_puppet"]

[project.scripts]
voice_puppet = 'voice_puppet:main'
